--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
 
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -23,7 +23,8 @@
 	<br><br>
   
     <h3 class="btn btn-danger" id="speed">Song Name:</h3>
- 
+    <button class="btn btn-success play" onclick="musicplay()">Play</button>
+    <button class="btn btn-danger play" onclick="musicstop()">Stop</button>
 </center>
 
 <script src="main.js"></script>
